# tambora

./: .cruft.json  .gitignore  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: release.yml  tests.yml
diagnostics/: ellipsoidal_benchmark.py  ext_pot_benchmark.py  wrapper_benchmark.py
diagnostics/convergence/: plummer.ipynb  plummer_convergence.py
diagnostics/dt_scaling/: dt_accuracy_scaling.py
diagnostics/integration_test/: integration_testing.ipynb
diagnostics/n_particle_scaling/: nparticles_scalings.py
diagnostics/sanity_checks/: CHECK_01_External_Potential.ipynb  CHECK_03_df.ipynb  binaries.ipynb  direct_summation_example.ipynb
docs/: conf.py  index.rst  tests_and_docs_to_write.md
docs/examples/: 03_Self_Gravity.ipynb  04_External_Forces.ipynb  05_Integration_With_Multiple_Components.ipynb  EX1_Multicomponent_Shell.ipynb  EX1_Multicomponent_Shell.py  EX1_Multicomponent_Shell.rst  EX2_Disk.ipynb  EX2_Disk.py  EX2_Disk.rst  EX3_GC_Stream.ipynb  EX3_GC_Stream.py  EX3_GC_Stream.rst  EX4_analysis.ipynb  EX4_satellite_script.py  EX5_GC_Satellite_script.py  Hyades_3D_Positions.ipynb  Hyades_Force_Analysis.ipynb  truncated_nfw.ipynb
docs/tutorials/: 01_Simulation_Basics.ipynb  02_Sampling_Helpers.ipynb  03_Self_Gravity.ipynb  04_External_Forces.ipynb  06_TruncatedNFW.ipynb  07_Forces.ipynb  index.rst  multicomp_sampling.ipynb  nfw_halo.ipynb  nfw_halo_2.ipynb  plummer_ev_2.ipynb
docs/user_guide/: computing_component_self_gravity.rst  computing_self_gravity.rst  external_forces.rst  external_potentials.rst  initial_conditions.rst  interoperability.rst  making_a_simulation.rst  running_a_simulation.rst  satellite_tools.rst  simulation_outputs.rst
ezfalcon/: version.py
ezfalcon/dynamics/: __init__.py
ezfalcon/simulation/: component.py  simulation.py
ezfalcon/tests/: test_CompositeForce.py  test_component.py  test_falcON.py  test_leapfrog.py  test_runner.py  test_self_gravity_fn.py  test_simulation.py
ezfalcon/tools/: __init__.py  galpy_tools.py  new_trunc_NFW.ipynb  truncatedNFW.ipynb
licenses/: LICENSE.rst
sanity_checks/: CHECK_02_Origin_Singularity.ipynb  integration_rename.ipynb
src/tambora/: version.py
tambora/simulation/: __init__.py  _decorators.py
tambora/tests/: conftest.py  test_CompositeForce.py  test_component.py  test_direct_summation.py  test_falcON.py  test_runner.py  (+6 more)
(+47 files in other folders)
