[build-system]
requires = [
  "setuptools>=62.1",
  "setuptools_scm[toml]>=8.0.0",
  "numpy",
  "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "tambora"
description = "An n-body code for the modern era."
requires-python = ">=3.10"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "licenses/LICENSE.rst" }
authors = [
  { name = "Gabriel Pfaffman", email = "gabriel.pfaffman@mail.utoronto.ca" },
]
dependencies = [
    "numpy",
    "tqdm"
]
dynamic = ["version"]

[project.optional-dependencies]
galpy = [
    "galpy>=1.9",
]
test = [
    "pytest",
    "pytest-doctestplus",
    "pytest-cov",
    "galpy>=1.9",
    "astropy",
]
docs = [
    "sphinx",
    "sphinx-automodapi",
    "pydata-sphinx-theme",
    "sphinx-design",
    "nbsphinx",
    "sphinx-copybutton",
    "pandoc",
    "ipykernel",
]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["tambora*"]

[tool.setuptools_scm]
version_file = "tambora/version.py"
local_scheme = "no-local-version"

[tool.pytest.ini_options]
testpaths = [
  "tambora",
  "docs",
]
doctest_plus = "enabled"
text_file_format = "rst"
addopts = "--doctest-rst"
norecursedirs = ["tambora[\\/]_dev"]

[tool.coverage.run]
omit = [
 "tambora/__init*",
 "tambora/conftest.py",
 "tambora/*setup_package*",
 "tambora/tests/*",
 "tambora/*/tests/*",
 "tambora/extern/*",
 "tambora/version*",
 "*/tambora/__init*",
 "*/tambora/conftest.py",
 "*/tambora/*setup_package*",
 "*/tambora/tests/*",
 "*/tambora/*/tests/*",
 "*/tambora/extern/*",
 "*/tambora/version*",
]

[tool.coverage.report]
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",
  # Don't complain about packages we have installed
  "except ImportError",
  # Don't complain if tests don't hit assertions
  "raise AssertionError",
  "raise NotImplementedError",
  # Don't complain about script hooks
  "def main(.*):",
  # Ignore branches that don't pertain to this version of Python
  "pragma: py{ignore_python_version}",
  # Don't complain about IPython completion helper
  "def _ipython_key_completions_",
  # typing.TYPE_CHECKING is False at runtime
  "if TYPE_CHECKING:",
  # Ignore typing overloads
  "@overload",
]
